examples/test/testpolicy1857.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1857
  namespace: namespace137
spec:
  podSelector:
    matchLabels:
      key4: value0
      key33: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value25
          key27: value48
          key25: value24
      podSelector:
        matchLabels:
          key19: value10
          key32: value16
          key36: value22
